# cpp-template

./: CMakeLists.txt  README.md
include/boilerplate/: boilerplate.h
source/: boilerplate.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
